--- a/bios/gw816_bios.cfg
+++ b/bios/gw816_bios.cfg
@@ -1,18 +1,19 @@
 MEMORY {
-    ZP:         start = $00,    size = $0100, file = "";
-    SYSVECTORS: start = $D000,  size = $0100, file = "%O.bin",  fill = yes;
-    BIOS:       start = $D100,  size = $2A00, file = "%O.bin";
-    BIOSDATA:   start = $FB00,  size = $0400, file = "";
+    ZEROPAGE:   start = $00,    size = $0100, file = "";
+    BIOS:       start = $D000,  size = $2F00, file = "%O.bin";
     BOOTSTRAP:  start = $FFA0,  size = $0040, file = "%O-bootstrap.bin",  fill = yes;
     HWVECTORS:  start = $FFE0,  size = $0020, file = "%O-bootstrap.bin",  fill = yes;
+    MONITOR:    start = $10000, size = $4000, file = "%O-monitor.bin";
 }
 
 SEGMENTS {
-    ZEROPAGE:   load = ZP,          type = zp,  define = yes;
-    CODE:       load = BIOS,        type = ro;
-    RODATA:     load = BIOS,        type = ro;
-    BSS:        load = BIOSDATA,    type = bss;
-    SYSVECTORS: load = SYSVECTORS,  type = ro;
-    BOOTSTRAP:  load = BOOTSTRAP,   type = ro;
-    HWVECTORS:  load = HWVECTORS,   type = ro;
+    ZEROPAGE:       load = ZEROPAGE,    type = zp,  define = yes;
+    BIOS:           load = BIOS,        type = ro;
+    BIOSDATA:       load = BIOS,        type = ro;
+    BIOSBSS:        load = BIOS,        type = bss;
+    BOOTSTRAP:      load = BOOTSTRAP,   type = ro;
+    HWVECTORS:      load = HWVECTORS,   type = ro;
+    MONITOR:        load = MONITOR,     type = ro;
+    MONITORDATA:    load = MONITOR,     type = ro;
+    MONITORBSS:     load = MONITOR,     type = rw;
 }
