update memory map

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -6,17 +6,14 @@ LD = ld65
 LDFLAGS = -m $@.map -Ln $@.debug
 
 SOURCES = src/kernel/init.s src/kernel/registers.s src/kernel/irq.s \
-		  src/kernel/debug.s src/kernel/monitor.s
-
+		  src/kernel/debug.s src/kernel/monitor.s src/kernel/jump_table.s \
+		  src/kernel/vectors.s
 .SUFFIXES:
 .PHONY: all clean
-all: romstrap kernel install
+all: kernel install
 
 %.o : %.s
 	$(AS) $(ASFLAGS) -l $*.lst -o $@ $<
-
-romstrap: src/romstrap/romstrap.o
-	$(LD) $(LDFLAGS) -C romstrap.cfg -o $@.bin $^
 
 kernel: $(SOURCES:.s=.o)
 	$(LD) $(LDFLAGS) -C kernel.cfg -o $@.bin $^
