--- a/kernel/kernel.cfg
+++ b/kernel/kernel.cfg
@@ -1,22 +1,19 @@
 MEMORY {
     ZP:             start = $000000, size = $0100, file = "";
-    PSTACK:         start = $000100, size = $0F00, file = "";
-    KCODE:          start = $001000, size = $B000, fill = yes;
-    KRODATA:        start = $00C000, size = $1000, fill = yes;
-    KDATA:          start = $00D000, size = $2C00;
-    KDIRECT:        start = $00FC00, size = $0100, file = "", define = YES;
-    KSTACK:         start = $00FD00, size = $0200, file = "", define = YES;
-    IO:             start = $00FF00, size = $00E0, file = "";
-    ROMSTRAP:       start = $00FFE0, size = $0020, file = "";
+    STACK:          start = $00B800, size = $0200, file = "", define = YES;
+    DIRECT:         start = $00BA00, size = $0100, file = "", define = YES;
+    RAM:            start = $00BB00, size = $0500, file = "";
+    ROM:            start = $00C000, size = $3FE0, fill = yes;
+    VECTORS:        start = $00FFE0, size = $0020, fill = yes;
     PCODE:          start = $010000, size = $FFF0, file = "", define = YES;
-    PRODATA:        start = $020000, size = $FFF0, file = "";
-    PDATA:          start = $030000, size = $FFF0, file = "";
 }
 
 SEGMENTS {
     ZEROPAGE:   load = ZP, type = zp;
-    CODE:       load = KCODE, type = ro;
-    RODATA:     load = KRODATA, type = ro, define = YES;
-    DATA:       load = KCODE, run = KDATA, type = rw, define = YES;
-    BSS:        load = KDATA, type = bss, define = yes;
+    JMPTABLE:   load = ROM, type = ro;
+    CODE:       load = ROM, type = ro;
+    RODATA:     load = ROM, type = ro, define = YES;
+    DATA:       load = ROM, run = RAM, type = rw, define = YES;
+    BSS:        load = RAM, type = bss, define = yes;
+    VECTORS:    load = VECTORS, type = ro;
 }
