update to new ROM layout

--- a/clio/CMakeLists.txt
+++ b/clio/CMakeLists.txt
@@ -10,16 +10,11 @@ set(CMAKE_CXX_STANDARD 17)
 pico_sdk_init()
 
 add_executable(clio_firmware
-        main.c inc/config.h modules/serial_module.c inc/serial_module.h inc/irq_module.h inc/reg_module.h inc/bus_module.h modules/bus_module.c inc/ring_buffer.h inc/rom_module.h modules/rom_module.c inc/led_module.h modules/led_module.c
-        kernel.c
-        modules/irq_module.c)
+        main.c inc/config.h
+        inc/bus_module.h modules/bus_module.c
+        inc/rom_module.h modules/rom_module.c
+        kernel.c)
 include_directories(clio_firmware PRIVATE inc)
-#add_custom_command(
-#        OUTPUT romstrap.c
-#        COMMAND xxd -i romstrap.bin ${CMAKE_CURRENT_BINARY_DIR}/romstrap.c
-#        WORKING_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}
-#        DEPENDS ${CMAKE_CURRENT_SOURCE_DIR}/romstrap.bin
-#)
 add_custom_command(
         OUTPUT kernel.c
         COMMAND xxd -i kernel.bin ${CMAKE_CURRENT_BINARY_DIR}/kernel.c
